--- a/collection/weibo.ipynb
+++ b/collection/weibo.ipynb
@@ -2,15 +2,36 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fcc32e22",
+   "id": "d8504101",
    "metadata": {},
    "source": [
-    "- 热门电视剧：https://movie.douban.com/j/search_subjects?type=tv&tag=热门&page_limit=50&page_start=0\n",
-    "    - https://blog.csdn.net/weixin_43844838/article/details/107812440\n",
-    "- 热门电影：https://movie.douban.com/j/search_subjects?type=movie&tag=热门&page_limit=50&page_start=0\n",
-    "- 实时热门书影音\n",
-    "    - https://m.douban.com/subject_collection/subject_real_time_hotest\n",
-    "    - https://m.douban.com/rexxar/api/v2/subject_collection/subject_real_time_hotest/items?start=0&count=50&updated_at=&items_only=1&for_mobile=1"
+    "- https://github.com/chuanyangjin/Weibo-Wordcloud/blob/main/weibo_wordcloud.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "49afc25b",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-25T14:57:11.082181Z",
+     "start_time": "2023-10-25T14:57:11.065553Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# 基于 m.weibo.cn 抓取少量数据，无需登陆验证\n",
+    "url_template = \"https://m.weibo.cn/api/container/getIndex?type=wb&queryVal={}&containerid=100103type=2%26q%3D{}&page={}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4f30afc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://m.weibo.cn/api/container/getIndex?type=wb&queryVal=调休&containerid=100103type=2%26q%3D调休&page=1"
    ]
   }
  ],
