--- a/basics.ipynb
+++ b/basics.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "source": [
     "- 服务器端周期性爬虫\n",
-    "    - `crontab`：周期性调度"
+    "    - `crontab`：周期性调度\n",
+    "- 数据库持久化存储\n",
+    "    - `redis`"
    ]
   }
  ],
