--- a/spider/beautiful_soup.ipynb
+++ b/spider/beautiful_soup.ipynb
@@ -95,15 +95,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "3b7b7d93-a438-4029-857b-79f39471c208",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-30T14:30:52.659983Z",
-     "iopub.status.busy": "2024-12-30T14:30:52.659562Z",
-     "iopub.status.idle": "2024-12-30T14:30:52.857417Z",
-     "shell.execute_reply": "2024-12-30T14:30:52.855668Z",
-     "shell.execute_reply.started": "2024-12-30T14:30:52.659953Z"
+     "iopub.execute_input": "2024-12-30T14:32:02.709613Z",
+     "iopub.status.busy": "2024-12-30T14:32:02.709057Z",
+     "iopub.status.idle": "2024-12-30T14:32:03.023754Z",
+     "shell.execute_reply": "2024-12-30T14:32:03.022002Z",
+     "shell.execute_reply.started": "2024-12-30T14:32:02.709569Z"
     }
    },
    "outputs": [
@@ -116,10 +116,12 @@
     }
    ],
    "source": [
-    "soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "divs = soup.find_all('div', {'class': 'ingredients-rich-text'})\n",
-    "if divs:\n",
-    "    print(divs[0])"
+    "if response.status_code == 200:\n",
+    "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "    divs = soup.find_all('div', {'class': 'ingredients-rich-text'})\n",
+    "    if divs:\n",
+    "        ingredients = str(divs[0])\n",
+    "        print(ingredients)"
    ]
   },
   {
